--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "18.1.0",
     "react-markdown": "^8.0.3",
     "react-multi-carousel": "^2.8.2",
+    "remark-gfm": "^3.0.1",
     "sass": "^1.54.9"
   },
   "devDependencies": {
