--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.4.0",
     "react-markdown": "^8.0.3",
     "react-multi-carousel": "^2.8.2",
     "remark-gfm": "^3.0.1",
