--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-icons": "^4.4.0",
     "react-markdown": "^8.0.3",
     "react-multi-carousel": "^2.8.2",
+    "react-syntax-highlighter": "^15.5.0",
+    "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
     "sass": "^1.54.9"
   },
@@ -23,6 +25,7 @@
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
+    "@types/react-syntax-highlighter": "^15.5.5",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
